tests/fixtures/invalid/circular_extend.seed
import "theme_b.seed"

theme a extends b {
  button {
    primary {
      bg: "blue.500"
      text: "white"
    }
  }
}
